[package]
name = "tide-rustls"
version = "0.1.3"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "tide tls listener based on async-tls and rustls"
readme = "README.md"
repository = "https://github.com/jbr/tide-rustls"
documentation = "https://docs.rs/tide-rustls"
license = "MIT OR Apache-2.0"
keywords = ["tide", "https", "tls"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-std = "1.7.0"
tide = { version = "0.15.0", default-features = false }
async-tls = "0.10.0"
rustls = "0.18.1"
async-h1 = "2.1.2"
async-dup = "1.2.2"
