[package]
name = "tide-rustls"
version = "0.3.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "tide tls listener based on async-rustls and rustls"
readme = "README.md"
repository = "https://github.com/jbr/tide-rustls"
documentation = "https://docs.rs/tide-rustls"
license = "MIT OR Apache-2.0"
keywords = ["tide", "https", "tls"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-std = "1.9.0"
tide = { version = "0.16.0", default-features = false }
async-rustls = "0.2.0"
rustls = "0.19.0"
async-h1 = "2.3.2"
async-dup = "1.2.2"
